fixed bug for some parts of the styling get cut off

--- a/about-us/src/components/Ethics/Ethics.css
+++ b/about-us/src/components/Ethics/Ethics.css
@@ -26,7 +26,7 @@
 .flex-container {
   height: 100%;
   width: 100%;
-  display: flex;
+  /* display: flex; */
   flex-direction: column;
 }
 
