--- a/about-us/src/components/Investors/Investors.css
+++ b/about-us/src/components/Investors/Investors.css
@@ -5,6 +5,7 @@
   padding-bottom: 3em;
   color: #f1edee;
   width: 100%;
+  height:100%;
 }
 
 .investors-title {
